# jaipy

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  pytest.ini
.github/workflows/: train_model.yml  train_test_mock.yml  unit_tests.yml
architecture/: original.json  tiny.json
jaipy/: callbacks.py  dataset.py  logger.py  loss.py  main.py  model.py  settings.py  utils.py
tests/: test_dataset.py  test_loss.py  test_utils.py
tests/testres/: labels.json  mock_data.py
