[tool.poetry]
name = "jaipy"
version = "0.1.0"
description = "Just Another Implementation of a Python-based YOLO system"
authors = ["Jaime Tenorio <jaimeteb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
kaleido = "0.2.1"
fiftyone = "^0.19.1"
pydantic = "^1.10.6"
colorlog = "^6.7.0"
mlflow-skinny = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ubuntu tf
[tool.poetry.group.ubuntu]
optional = true

[tool.poetry.group.ubuntu.dependencies]
tensorflow = "^2.11.0"

# macos tf
[tool.poetry.group.macos]
optional = true

[tool.poetry.group.macos.dependencies]
tensorflow-macos = "^2.11.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "E0401, C0116, C0103, R0914, R0903, C0115"

# scripts
[tool.poetry.scripts]
train = "jaipy.main:train"
train-test = "jaipy.main:train_test"
test = "jaipy.main:test"
train-test-mock = "jaipy.main:train_test_mock"
generate-dataset = "jaipy.main:generate_dataset"
predict = "jaipy.main:predict"
live-predict = "jaipy.main:live_predict"
generate-test-dataset = "jaipy.main:generate_test_dataset"
evaluate = "jaipy.main:evaluate"
predict-images = "jaipy.main:predict_images"

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
log_cli_level = "INFO"
log_cli = true
